--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - data/menu.json
+    - data/movies.json
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
